# labs

./: .claude-prompt-pr.tmp  .claude-prompt.tmp  .deno.standard-decorators.shell-entrypoint.56843.e7bcd52e-684b-4257-875a-11d793b9ed18.json  .deno.standard-decorators.ui-phase6.56839.72b8144f-1935-4df4-89c2-3ed7633120b6.json  .deno.standard-decorators.ui-phase6.70860.c2c7ad69-bb7d-4750-8366-23621f627359.json  .denoignore  .dockerignore  .env  .gitignore  .pr-desc.tmp  .prettierignore  .prettierrc  .prettierrc.json  AGENTS.md  API_DOCUMENTATION.md  BACKEND_API_REFERENCE.md  BATCH_SIGNING_PLAN.md  BUG-REPORT-mentionables-composition-reactivity.md  CELL_PASSING_POC_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CNAME  COMPONENT_REFERENCE.md  CRITICAL_CLAIM_PERFORMANCE_ISSUE.md  CT_OUTLINER_CELLCONTROLLER_MIGRATION_PLAN.md  Cargo.toml  DESIGN_TOKEN_ALIGNMENT.md  DRAFT-ISSUE-onClick-derive-wrap.md  Dockerfile.dashboard  Dockerfile.toolshed  FAB_SPEC.md  FIXTURE_INPUT_VALIDATION_SPEC.md  FIXTURE_VALIDATION_RESULTS.md  FOCUS.md  HANDOFF.md  IMPL.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN_CAUSE_BASED_OPTIMIZATION.md  IMPLEMENTATION_PLAN_CELL_GET_OPTIMIZATION.md  IMPLEMENTATION_PLAN_REMOVE_REDUNDANT_CLAIM.md  (+96 more)
.agents/: blackboard.db-shm  blackboard.db-wal  settings.local.json
.beads/: beads.left.jsonl  beads.left.meta.json  config.yaml  issues.jsonl  metadata.json
.claude/: members-fix-plan.md  mentionable-wish-flakiness-plan.md  page-manager-helper.sh  refactor-notes.md  rfc-pattern-instantiation.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.spaces/: did:key:space.sqlite-shm  did:key:space.sqlite-wal
background-charm-service/: CLAUDE.md  README.md  cast-admin.ts  deno.json
behavior/: .mcp.json  behavior-utils.ts  counter.ts  deno.json  fetcher.ts  index.ts  state-machine.ts
builder/: deno.json
charm/: deno.json
charm-seeder/: README.md  automation.ts  cli.ts  commands.ts  deno.json  interfaces.ts  jumble.ts  prompts.ts  scenarios.ts
cli/: background-charm-runner-cli.ts  background-charm-runner.ts  cast-recipe.ts  charm_demo.ts  curl.ts  deno.json  dreamer.ts  dreams.json  gmail.ts  google-importer.ts  key-did.ts  loop.sh  main.ts  memory_demo.ts  monitor_slow_test.ts  notes.ts  readwise.ts  session.ts  slow.ts  write-to-authcell.ts
common-identity/: README.md
common-memory/: clock.ts  commit.ts  deno.json  socket.ts  space.ts  ucan.ts
deno-vite-plugin/: deno.json  tsconfig.json
deno-web-test/: README.md  browser.ts  manifest.ts  mod.ts  runner.ts  utils.ts
deploy/: deployment.yml
deprecated-patterns/: _agentic.tsx  _common-ui-v2-showcase.tsx  _email-date-extractor.tsx  _gpeople.tsx  _link-list.tsx  _plaid.tsx  _recipe.tsx  all-lists.tsx  all-pages.tsx  bgCounter.tsx  calendar-list.tsx  chat-user-sessions.tsx  discord.tsx  discordIntegrationsManagement.tsx  dom-parser.ts  email-list.tsx  gcal.tsx  github.tsx  gmail-auth.tsx  gmail-importer.tsx  ifelse_test.tsx  input.tsx  research-report.tsx  rss-utils.test.ts  rss.tsx  simple-draw.tsx  simpleValue.tsx  test-generate-object.tsx
docs/: BLESSED_VERIFICATION_NOTES.md  FAQ.md  FINDINGS_URL_PATTERN_LOADING.md  FOLK_WISDOM_VALIDATION.md  PATTERN_LIBRARY_RATIONALIZATION.md  QUICKSTART.md  REACTIVE-REDUCE-MAPBYKEY.md  README.md  SESSION-crdt-collaborative-editing.md  TODO-crdt-collaborative-editing.md  URL_PATTERN_LOADING.md  access-recovery.md  acl.md  charm-cell-diagram.md  charm_exploration.ipynb  check.md  check.sh  check.ts  check.vocabulary.json  code_quality_tasks.md  glossary.md  keyring-architecture.md  scheduler-graph-investigation.md  scheduler-implementation-plan.md  space-petnames.md  tools.md  usuba.md  why.md  workos-integration-plan.md
east-coast-recipe.tsx/: page.tsx
formal/: Cfc.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
hooks/: hooks.json
html/: deno.json  deno.jsonc
identity/: README.md  deno-web-test.config.ts  deno.json
iframe-sandbox/: README.md
jumble/: deno.json  tailwind.config.js  vite.config.ts
legacy-scripts/: arena.ts  cast-recipe.ts  charm_demo.ts  memory_demo.ts  name2did.ts  write-to-authcell.ts
lint-plugins/: no-as-any-allowlist.ts  no-as-any.ts
llm/: deno.json
memory/: README.md  access.ts  changes.ts  commit.ts  consumer.ts  deno.json  error.ts  fact.ts  interface.ts  lib.ts  memory.ts  provider.ts  receipt.ts  settings.ts  socket.ts  space-schema.ts  space.ts  subscription.ts  traverse.ts  util.ts
otel-collector/: README.md  collector.sh  docker-compose.yml  memory-integration.md  otel-collector-config.yaml
prds/: YYYY-MM-DD-TEMPLATE.md
recipes/: README.md  _agentic.tsx  _gpeople.tsx  (+58 more)
rust/example-crate/: Cargo.toml  README.md  build-wasm-component.sh
rust/example-crate/src/: lib.rs
rust/example-crate/src/cowsayer/: component.rs  mod.rs  native.rs
rust/example-crate/wit/: cowsay.wit
rust/gemcraft-leptos/: Cargo.toml  Trunk.toml  index.html  main.css
rust/gemcraft-leptos/src/: data.rs  db.rs  extract.rs  gem.rs  implement_app_prompt.md  llm.rs  main.rs  micro_app.rs  tabs.rs  toggle.rs
rust/usuba/: Cargo.toml  Dockerfile  README.md
rust/usuba-bundle/: Cargo.toml
rust/usuba-bundle/src/: lib.rs
rust/usuba-compat/: Cargo.toml  build-wasm-component.sh
rust/usuba-compat/src/: lib.rs
rust/usuba-compat/wit/: usuba-compat.wit
rust/usuba/src/: error.rs  lib.rs  openapi.rs  serve.rs  storage.rs
rust/usuba/src/bake/: bake.rs  fs.rs  javascript.rs  mod.rs  python.rs
rust/usuba/src/recipe/: common.rs  mod.rs  runtime.rs
rust/usuba/src/routes/: component.rs  mod.rs  ui.rs
rust/usuba/src/routes/bundle/: javascript.rs  mod.rs
rust/usuba/src/routes/llm/: proxy.rs
rust/usuba/src/routes/module/: build.rs  mod.rs  retrieve.rs
rust/usuba/src/routes/recipe/: eval.rs  mod.rs  value.rs
rust/usuba/src/routes/verify/: mod.rs
rust/verification-svc/: Cargo.toml  README.md
rust/verification-svc/src/: cli.rs  cluster.rs  error.rs  main.rs  verification.rs
rust/verification-svc/src/server/: mod.rs  serve.rs
rust/verification-svc/src/server/routes/: verify.rs
(+2027 files in other folders)
