[package]
name = "example-crate"
version = "0.1.0"
edition = "2021"
description = "A Rust library that works on the web, in Deno and natively"
keywords = ["example"]
categories = [
  "command-line interface"
]
rust-version = "1.75.0"
license = "UNLICENSED"
documentation = "https://github.com/commontoolsinc/labs"
repository = "https://github.com/commontoolsinc/labs"
homepage = "https://github.com/commontoolsinc/labs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = { workspace = true }

