[package]
name = "gemcraft-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
wasm-bindgen-futures = "0.4.42"
