[package]
name = "gemcraft-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
regex = "1.5.4"
uuid = { version = "1.3", features = ["v4"] }
indexed_db_futures = "0.5.0"
js-sys = "0.3.50"
web-sys = "0.3.69"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
anyhow = "1.0.71"
quick-xml = "0.22.0"
rand = "0.8.5"