[package]
name = "usuba-compat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = { workspace = true }
js-component-bindgen = { workspace = true }
wit-bindgen = { workspace = true }
wasmtime-environ = { version = "20",  features = ["component-model", "compile"] }