[package]
name = "usuba"
description = "A Common server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }
blake3 = { workspace = true }
bytes = { workspace = true }
hyper-util = { workspace = true }
mime_guess = { workspace = true }
redb = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "process", "fs"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
usuba-bundle = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
wasmtime = { workspace = true }
wasmtime-wasi = { version = "21" }
wit-parser = { workspace = true }
# gcloud-sdk = { version = "0.24.6", features = ["google-cloud-aiplatform-v1"] }

